fixing alignment

--- a/shape/shape2.css
+++ b/shape/shape2.css
@@ -1,21 +1,22 @@
 body {
   margin-left: 100px;
   margin-top: 100px;
+  display: block;
+  float: left;
 }
+
 * {
   margin-bottom: 100px;
   text-align: center;
   font-size: 40px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  left: 1100px;
 }
-
 * p {
-  padding-top: 40%;
+  padding-top: 45%;
 }
 
 .square {
-  background-image: linear-gradient(to bottom right,red, yellow,blue);
+  background-image: linear-gradient(to bottom right, red, yellow, blue);
   width: 400px;
   height: 400px;
   border-radius: 50px 5px 100px 50%;
@@ -36,6 +37,7 @@ body {
     border-right: 500px solid transparent ;
     border-bottom: 500px solid green;
 } */
+
 .triangle {
   width: 300px;
   height: 300px;
@@ -47,11 +49,6 @@ body {
 .triangle:hover {
   background: red linear-gradient(blue, red);
   transform: scale(1.3);
-  margin-left: 50px;
-}
-.triangle p {
-  padding-top: 280px;
-  width: 100px;
 }
 
 .trapezoid {
@@ -63,25 +60,21 @@ body {
   /* float: left; */
 }
 
-.ttext {
-  position: absolute;
-  left: 100px;
-  /* top: 200px; */
-  /* font-size: 300px; */
-}
-
 .videoangle {
-  position: absolute;
   width: auto;
   height: 300px;
   transform: perspective(10px) rotateX(1deg);
   transition: 0.5s ease-in-out;
+  transform-origin: 50%;
 }
 
 .videoangle:hover {
+  margin-top: 100px;
+  margin-bottom: 150px;
   width: auto;
   height: 300px;
   transform: perspective(10px) rotateX(0deg) scale(2);
+  transform-origin: 20%;
 }
 
 .trapezoid2 {
@@ -100,5 +93,5 @@ body {
 }
 
 .trapezoid2:hover .trapezoid2 p {
-  font-size: 100px ;
+  font-size: 100px;
 }
